# pkgclip

./: .gitignore  AUTHORS  HISTORY  LICENSE  Makefile  Makefile.am  README  README.md  configure.ac  main.c  org.jjk.PkgClip.conf  org.jjk.PkgClip.service  org.jjk.PkgClip.service.tpl  org.jjk.pkgclip.policy  pkgclip-dbus.c  pkgclip.1  pkgclip.desktop  pkgclip.h  pkgclip.pod  util.c  util.h  xpm.h
